--- a/public/link.html
+++ b/public/link.html
@@ -30,6 +30,11 @@
 
     <div id="app" class="w-full max-w-md p-8 space-y-6 bg-gray-800 rounded-lg shadow-lg text-center">
 
+        <!-- Logo -->
+        <div class="flex justify-center">
+            <img src="https://kevinmidnight7-sudo.github.io/messageboardkc/kcevents.png" alt="KC Events Logo" class="h-16 mb-4">
+        </div>
+
         <!-- Loading State -->
         <div id="loadingState">
             <h1 class="text-2xl font-bold">Connecting...</h1>
@@ -45,6 +50,8 @@
                 <input id="loginPass" type="password" placeholder="Password" class="w-full px-4 py-2 text-gray-900 bg-gray-200 rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-500">
                 <button id="loginBtn" class="w-full form-btn">Log In & Link Account</button>
                 <p id="loginError" class="text-red-400 text-sm"></p>
+                <!-- Sign Up Link -->
+                <p class="text-sm text-gray-400">No account? <a href="https://kcevents.uk/#loginpage" target="_blank" class="text-indigo-400 hover:underline">Sign up!</a></p>
             </div>
         </div>
 
